add editable features

--- a/Resources/views/js/tree_javascript_custom.html.twig
+++ b/Resources/views/js/tree_javascript_custom.html.twig
@@ -43,6 +43,9 @@
                 "html_data",
                 "themes",
                 "types",
+                {% if conf.contextual_menu %}
+                "contextmenu",
+                {% endif %}
                 {% if conf.isSortable %}
                 "crrm",
                 "dnd"
