add search feature

--- a/Resources/views/js/tree_javascript_custom.html.twig
+++ b/Resources/views/js/tree_javascript_custom.html.twig
@@ -43,6 +43,9 @@
                 "html_data",
                 "themes",
                 "types",
+                {% if conf.is_searchable %}
+                "search",
+                {% endif %}
                 {% if conf.contextual_menu %}
                 "contextmenu",
                 {% endif %}
