--- a/Resources/views/tree_branch.html.twig
+++ b/Resources/views/tree_branch.html.twig
@@ -1,14 +1,16 @@
 {% set rel = rel is defined ? rel : 'default' %}
+{% set rel = (node.getChildren|length > 0 and rel != 'root') ? 'folder' : rel %}
 <li class="jstree-open{{ node.children|length == 0 ? ' jstree-leaf' : '' }}" rel="{{ rel }}" id="node-{{ node.id }}">
     {% if 'root' == rel and not conf.editable_root %}
         <a href="#">{{ node }}</a>
     {% else %}
         {% include conf.label_template %}
     {% endif %}
-    {% if node.getChildren|length > 0 %}
+    {% if (rel == 'folder' or rel == 'root') %}
+    {% set rel = rel == 'root' ? 'folder' : 'default' %}
     <ul>
         {% for child in node.children %}
-            {% include "CypressTreeBundle::tree_branch.html.twig" with { 'node': child, 'rel': 'default' } %}
+            {% include "CypressTreeBundle::tree_branch.html.twig" with { 'node': child, 'rel': rel } %}
         {% endfor %}
     </ul>
     {% endif %}
