--- a/Resources/views/tree_branch.html.twig
+++ b/Resources/views/tree_branch.html.twig
@@ -11,6 +11,7 @@
     <ul>
         {% for child in node.children %}
             {% include "CypressTreeBundle::tree_branch.html.twig" with { 'node': child, 'rel': rel } %}
+            <li rel="default" id="{{ child.id }}" class="jstree-add"><a href="#" class="add"><i class="icon-plus"></i>Ajouter</a></li>
         {% endfor %}
     </ul>
     {% endif %}
