--- a/Resources/views/tree_branch.html.twig
+++ b/Resources/views/tree_branch.html.twig
@@ -1,8 +1,8 @@
 {% set rel = rel is defined ? rel : 'default' %}
 {% set rel = (node.getChildren|length > 0 and rel != 'root') ? 'folder' : rel %}
-<li class="jstree-open{{ node.children|length == 0 ? ' jstree-leaf' : '' }}" rel="{{ rel }}" id="node-{{ node.id }}">
+<li class="jstree-open{{ node.children|length == 0 ? ' jstree-leaf' : '' }} {{ node.relatedReferential ? ' jstree-related' : '' }}" rel="{{ rel }}" id="node-{{ node.id }}">
     {% if 'root' == rel and not conf.editable_root %}
-        <a href="#">{{ node }}</a>
+        <a href="#" class="jstree-root">{{ node }}</a>
     {% else %}
         {% include conf.label_template %}
     {% endif %}
@@ -12,7 +12,9 @@
         {% for child in node.children %}
             {% include "CypressTreeBundle::tree_branch.html.twig" with { 'node': child, 'rel': rel } %}
         {% endfor %}
-        <li rel="default" id="{{ child.id }}" class="jstree-add"><a href="#" class="add"><i class="icon-plus"></i>Ajouter</a></li>
+        {% if node.children|length > 0 %}
+            <li rel="default" id="{{ node.id }}" class="jstree-add"><a href="#" class="add"><i class="icon-plus"></i>Ajouter</a></li>
+        {% endif %}
     </ul>
     {% endif %}
 </li>
