add selectable, sortable config

--- a/Resources/views/tree.html.twig
+++ b/Resources/views/tree.html.twig
@@ -1,4 +1,4 @@
-<div class="cypress_tree">
+<div class="cypress_tree_{{ name }}">
     <ul>
         {% include "CypressTreeBundle::tree_branch.html.twig" with { 'rel': 'root' } %}
     </ul>
