--- a/Resources/views/tree_branch.html.twig
+++ b/Resources/views/tree_branch.html.twig
@@ -2,7 +2,7 @@
 {% set rel = (node.children|length > 0 and rel != 'root') ? 'folder' : rel %}
 <li class="jstree-open{{ node.children|length == 0 ? ' jstree-leaf' : '' }} {{ node.related_referential_id is defined ? ' jstree-related' : '' }}" rel="{{ rel }}" id="node-{{ node.id is defined ? node.id : '' }}">
     {% if 'root' == rel and not conf.editable_root %}
-        <a href="#" class="jstree-root">{{ node }}</a>
+        <a href="#" class="jstree-root">{{ node.name }}</a>
     {% else %}
         {% include conf.label_template %}
     {% endif %}
