add multiples features

--- a/Resources/views/js/tree_javascript_custom.html.twig
+++ b/Resources/views/js/tree_javascript_custom.html.twig
@@ -93,6 +93,10 @@ function startJstree_{{ name }}(){
                 label: "Renommer",
                 action: function (node) {  return {renameItem: this.rename(node) }; }
             },
+            deleteItem: { 
+                label: "del",
+                action: function (node) {  return {deleteItem: this.remove(node) }; }
+            },
         };
         return items;
     }
