--- a/Resources/views/tree.html.twig
+++ b/Resources/views/tree.html.twig
@@ -1,5 +1,5 @@
 <div class="cypress_tree_{{ name }}">
     <ul>
-        {% include "CypressTreeBundle::tree_branch.html.twig" with { 'rel': 'root' } %}
+        {% include "CypressTreeBundle::tree_branch.html.twig" with { 'rel': 'root','ref_before': ref_before } %}
     </ul>
 </div>
