--- a/Resources/views/tree_branch.html.twig
+++ b/Resources/views/tree_branch.html.twig
@@ -11,7 +11,7 @@
     <ul>
         {% if node.children|length > 0 %}
             {% for child in node.children %}
-                {% include "CypressTreeBundle::tree_branch.html.twig" with { 'node': child, 'rel': rel } %}
+                {% include "CypressTreeBundle::tree_branch.html.twig" with { 'node': child, 'rel': rel, 'ref_before':ref_before} %}
             {% endfor %}
         {% endif %}
     </ul>
