--- a/Resources/views/tree_branch.html.twig
+++ b/Resources/views/tree_branch.html.twig
@@ -1,5 +1,9 @@
 {% set rel = rel is defined ? rel : 'default' %}
-{% set rel = (node.children|length > 0 and rel != 'root') ? 'folder' : rel %}
+{% if node.children|length > 0 and rel!='root' %}
+    {% set rel = 'folder' %}
+{% elseif node.children|length == 0 %}
+    {% set rel = 'default' %}
+{% endif %}
 <li class="{{ rel == 'root' ? ' jstree-open' : 'jstree-closed' }} {{ node.children|length == 0 ? ' jstree-leaf' : '' }} {{ node.related_referential_id ? ' jstree-related' : '' }} {{ node.is_protected ? ' jstree-protected' : '' }}" rel="{{ rel }}" id="node-{{ node.id is defined ? node.id : '' }}">
     {% if 'root' == rel and not conf.editable_root %}
         <a href="#" class="jstree-root">{{ node.name }}</a>
