--- a/Resources/views/tree.html.twig
+++ b/Resources/views/tree.html.twig
@@ -1,4 +1,5 @@
-<div class="cypress_tree_{{ name }}">
+<div class="div_wait"></div>
+<div class="cypress_tree_{{ name }} hide">
     <ul>
         {% include "CypressTreeBundle::tree_branch.html.twig" with { 'rel': 'root','ref_before': ref_before } %}
     </ul>
