Fix: is_sortable param

--- a/Resources/views/js/tree_javascript_custom.html.twig
+++ b/Resources/views/js/tree_javascript_custom.html.twig
@@ -99,7 +99,7 @@ function startJstree_{{ name }}(search_type){
         {% if conf.is_selectable %}
         "checkbox",
         {% endif %}
-        {% if conf.isSortable %}
+        {% if conf.is_sortable %}
         "crrm",
         "dnd",
         {% endif %}
