--- a/Resources/views/js/tree_javascript_custom.html.twig
+++ b/Resources/views/js/tree_javascript_custom.html.twig
@@ -115,6 +115,10 @@ function startJstree_{{ name }}(search_type){
         {% endif %}
     }); 
 
+    $('.cypress_tree_{{ name }}').bind("after_open.jstree", function (e, data) {
+        document.documentElement.scrollTop = data.rslt.obj.position().top;
+    });
+  
    {% if conf.contextual_menu %}
    function customMenu(node) {
        var items = {
@@ -134,7 +138,6 @@ function startJstree_{{ name }}(search_type){
         return items;
     }
 
-  
    $('.cypress_tree_{{ name }}').bind("create.jstree", function (e, data) {
         var callUrl = Routing.generate('_cypress_tree_{{ conf.name }}_ajax_add', {
             parent: data.rslt.parent.attr("id").replace("node-",""),
